# deepagents-rl

./: .gitignore  Makefile  README.md  claude.md  demo_snippet.md  doc_verifier.py  grep.md  notes_for_me.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs_reviewer/: CLAUDE_CODE_STREAMING.md  FINAL_SUMMARY.md  README.md  SIMPLE_USAGE.md  example_docs.md  example_docs_corrected.md  example_docs_review_report.md  pyproject.toml  verify_streaming_code.py
docs_reviewer/docs_reviewer/: __init__.py  agent.py  cli.py  cli_agent.py  config.py  exceptions.py  main.py  markdown_parser.py  markdown_writer.py  mcp_integration.py  setup.py  test_parser.py
examples/code/: coding_agent.py  coding_instructions.py  main.py  requirements.txt
examples/research/: research_agent.py
libs/deepagents-cli/: pyproject.toml
libs/deepagents-cli/deepagents_cli/: __init__.py  __main__.py  commands.py  execution.py  main.py  tools.py
libs/deepagents-cli/tests/: test_file_ops.py
src/deepagents/: __init__.py  cli.py  default_agent_prompt.md  graph.py  prompts.py  skills.py  typer_cli.py
src/deepagents/backends/: __init__.py  composite.py  daytona.py  filesystem.py  fs.py  local_filesystem.py  memory_protocol.py  middleware.py  pagination.py  process.py  protocol.py  runloop-protocol.py  sandbox.py  state.py  store.py  typedefs.py  utils.py
src/deepagents/cli/: README.md  __init__.py  agent.py  config.py  execution.py  file_ops.py  input.py  main.py  ui.py
src/deepagents/github/: auth.py  tools.py
src/deepagents/memory/: README.md  __init__.py  backends.py  protocol.py
src/deepagents/memory/backends/: __init__.py  composite.py  filesystem.py  sqlite.py  state.py  store.py  utils.py
src/deepagents/middleware/: __init__.py  agent_memory.py  common.py  daytona.py  filesystem.py  general_factory.py  local_filesystem.py  patch_tool_calls.py  subagents.py
tests/: conftest.py  test_middleware.py  utils.py
tests/backends/: test_composite_backend.py  test_filesystem_backend.py  test_state_backend.py  test_store_backend.py
tests/cli/: test_file_ops.py
tests/integration_tests/: test_deepagents.py  test_filesystem_middleware.py  test_hitl.py  test_memory.py  test_subagent_middleware.py
